--- a/index.html
+++ b/index.html
@@ -46,10 +46,6 @@
           .main {
             color: white;
           }
-          .title02 {
-            color: white;
-            margin: 0 10px 0 10px;
-          }
 
           #map {
             width: 500px;
@@ -73,6 +69,11 @@
           width:800px;
           max-width:100%;
           margin-bottom:10px;
+
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
 }
 
 
@@ -84,10 +85,6 @@
 
            <div class="logo"></div>
             <h1 class="main">부엉s 산 정보</h1>
-            <p> 
-              <span class="title02">기업명</span><input type="text"><br>
-              <span class="title02">기업소개</span><input type="text">              
-            </p>
             <button>버튼입니다.</button>
            </div>
 
