--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
            </div>
 
 
-           <div id="map" style="width:500px;height:400px; border: 2px solid red; margin: 0 auto;"></div>
+           <div id="map" style="width:700px;height:600px; border-radius: 20px: 50px auto 0 auto;"></div>
            <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=899f102084fa39680008a7c20cd23ee6"></script>
            <script>
              var container = document.getElementById('map');
