--- a/index.html
+++ b/index.html
@@ -97,8 +97,21 @@
                center: new kakao.maps.LatLng(33.450701, 126.570667),
                level: 3
              };
-         
+
+             //지도 생성 위치
              var map = new kakao.maps.Map(container, options);
+
+             //마커 표시 위치
+             var markerPosition  = new kakao.maps.LatLng(33.450701, 126.570667); 
+
+             // 마커를 생성합니다
+            var marker = new kakao.maps.Marker({
+                position: markerPosition
+            });
+
+            // 마커가 지도 위에 표시되도록 설정합니다
+            marker.setMap(map);   
+
            </script>
 
 
