--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=899f102084fa39680008a7c20cd23ee6"></script>
 
-        </head>
-
         <style>
 
           @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200;400;600&display=swap');
@@ -69,6 +67,13 @@
             font-size: 16px;
           }
 
+          .map_name {
+            font-weight: bold;
+            margin: 0 auto;
+            width: 50px;
+            padding:10px;
+          }
+
         </style>
     
       </head>
@@ -85,21 +90,39 @@
           <div id="map" style="width:800px;height:600px; border-radius: 20px; margin: 50px auto 0 auto;"></div>
 
           <script>
-              var container = document.getElementById('map');
-              var options = {
-                center: new kakao.maps.LatLng(33.450701, 126.570667),
-                level: 5
-              };
-              //지도 생성 위치
-              var map = new kakao.maps.Map(container, options);
-              //마커 표시 위치
-              var markerPosition  = new kakao.maps.LatLng(33.450701, 126.570667); 
+              var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+                  mapOption = { 
+                      center: new kakao.maps.LatLng(33.450705, 126.570677), // 지도의 중심좌표
+                      level: 4 // 지도의 확대 레벨
+                  };
+              var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+
+              // 마커를 표시할 위치와 title 객체 배열입니다 
+              var imageSrc = 'owl.png', // 마커이미지의 주소입니다    
+                  imageSize = new kakao.maps.Size(64, 69), // 마커이미지의 크기입니다
+                  imageOption = {offset: new kakao.maps.Point(27, 69)}; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
+              // 마커의 이미지정보를 가지고 있는 마커이미지를 생성합니다
+              var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imageOption),
+                  markerPosition = new kakao.maps.LatLng(33.450705, 126.570677); // 마커가 표시될 위치입니다
               // 마커를 생성합니다
               var marker = new kakao.maps.Marker({
-                  position: markerPosition
+                  position: markerPosition, 
+                  image: markerImage // 마커이미지 설정 
               });
               // 마커가 지도 위에 표시되도록 설정합니다
-              marker.setMap(map);   
+              marker.setMap(map);  
+
+
+              var iwContent = '<div class="map_name">지리산</div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+                  iwPosition = new kakao.maps.LatLng(33.450701, 126.570667); //인포윈도우 표시 위치입니다
+              // 인포윈도우를 생성합니다
+              var infowindow = new kakao.maps.InfoWindow({
+                  position : iwPosition, 
+                  content : iwContent 
+              });
+              // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
+              infowindow.open(map, marker);   
           </script>
 
 
