--- a/index.html
+++ b/index.html
@@ -93,36 +93,65 @@
               var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
                   mapOption = { 
                       center: new kakao.maps.LatLng(33.450705, 126.570677), // 지도의 중심좌표
-                      level: 4 // 지도의 확대 레벨
+                      level: 2 // 지도의 확대 레벨
                   };
               var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
 
 
-              // 마커를 표시할 위치와 title 객체 배열입니다 
-              var imageSrc = 'owl.png', // 마커이미지의 주소입니다    
-                  imageSize = new kakao.maps.Size(64, 69), // 마커이미지의 크기입니다
-                  imageOption = {offset: new kakao.maps.Point(27, 69)}; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
-              // 마커의 이미지정보를 가지고 있는 마커이미지를 생성합니다
-              var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imageOption),
-                  markerPosition = new kakao.maps.LatLng(33.450705, 126.570677); // 마커가 표시될 위치입니다
-              // 마커를 생성합니다
-              var marker = new kakao.maps.Marker({
-                  position: markerPosition, 
-                  image: markerImage // 마커이미지 설정 
-              });
-              // 마커가 지도 위에 표시되도록 설정합니다
-              marker.setMap(map);  
+              var positions = [
+                  {
+                      content: '<div class="map_name">한라산</div>', 
+                      latlng: new kakao.maps.LatLng(33.450705, 126.570677)
+                  },
+                  {
+                      content: '<div class="map_name">북한산</div>', 
+                      latlng: new kakao.maps.LatLng(33.450936, 126.569477)
+                  },
+                  {
+                      content: '<div class="map_name">설악산</div>', 
+                      latlng: new kakao.maps.LatLng(33.450879, 126.569940)
+                  },
+                  {
+                      content: '<div class="map_name">무등산</div>',
+                      latlng: new kakao.maps.LatLng(33.451393, 126.570738)
+                  }
+              ];
 
 
-              var iwContent = '<div class="map_name">지리산</div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
-                  iwPosition = new kakao.maps.LatLng(33.450701, 126.570667); //인포윈도우 표시 위치입니다
-              // 인포윈도우를 생성합니다
-              var infowindow = new kakao.maps.InfoWindow({
-                  position : iwPosition, 
-                  content : iwContent 
-              });
-              // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
-              infowindow.open(map, marker);   
+
+              for (var i = 0; i < positions.length; i ++) {
+                  // 마커를 생성합니다
+                  var marker = new kakao.maps.Marker({
+                      map: map, // 마커를 표시할 지도
+                      position: positions[i].latlng // 마커의 위치
+                  });
+
+                  // 마커에 표시할 인포윈도우를 생성합니다 
+                  var infowindow = new kakao.maps.InfoWindow({
+                      content: positions[i].content // 인포윈도우에 표시할 내용
+                  });
+
+                  // 마커에 mouseover 이벤트와 mouseout 이벤트를 등록합니다
+                  // 이벤트 리스너로는 클로저를 만들어 등록합니다 
+                  // for문에서 클로저를 만들어 주지 않으면 마지막 마커에만 이벤트가 등록됩니다
+                  kakao.maps.event.addListener(marker, 'mouseover', makeOverListener(map, marker, infowindow));
+                  kakao.maps.event.addListener(marker, 'mouseout', makeOutListener(infowindow));
+              }
+
+              // 인포윈도우를 표시하는 클로저를 만드는 함수입니다 
+              function makeOverListener(map, marker, infowindow) {
+                  return function() {
+                      infowindow.open(map, marker);
+                  };
+              }
+
+              // 인포윈도우를 닫는 클로저를 만드는 함수입니다 
+              function makeOutListener(infowindow) {
+                  return function() {
+                      infowindow.close();
+                  };
+              }
+ 
           </script>
 
 
